[package]
name = "readpassphrase"
version = "0.1.0"
edition = "2018"
categories = ["api-bindings"]
description = "Rust API for OpenBSD's readpassphrase"
keywords = ["bsd", "auth", "api"]
license = "BSD-2-Clause"
authors = ["orvi"]
repository = "https://github.com/orvij/readpassphrase"

[dependencies]
libc = "0.2.98"
readpassphrase-sys = "0.1.0"
